# third-eye

./: .gitignore  backup.sh  flake.nix  justfile  pyproject.toml  run.py
extractor/: pyproject.toml
extractor/src/extractor/: __init__.py  cv.py  gen.py  yolo.py
matcher/: main.py  pyproject.toml  test.py
matcher/matcher/: db.py  index.py  paths.py  server.py  yolo.py
scrycache/: main.py  pyproject.toml
scrycache/src/scrycache/: __init__.py  cache.py
tiny-embed-server/: README.md  pyproject.toml  server.py
ui/: package.json  vite.config.ts
ui/src/: app.html  hooks.server.ts
ui/src/lib/: index.ts  state.svelte.ts
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
ui/src/routes/capture/: +page.svelte  +page.ts
ui/src/routes/collection/: +page.svelte  +page.ts
ui/src/routes/collection/search/: +page.svelte  +page.ts
ui/src/routes/sort/[id]/: +page.svelte  +page.ts
