[project]
name = "third-eye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["uvicorn>=0.35.0"]

[tool.uv.workspace]
members = ["extractor", "scrycache", "matcher", "tiny-embed-server"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]
python-version = "3.13"
